--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Header -->
 		<div id="header">
 			<div id="nav-wrapper"> 
-				<!-- Nav -->
+				<!-- Nav >
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
@@ -36,12 +36,12 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="container"> 
+			<div class="container"--> 
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Linear</a></h1>
-					<span class="tag">By TEMPLATED</span>
+					<h1><a href="#">Jasmin Odenwald</a></h1>
+					<span class="tag">B. Sc.</span>
 				</div>
 			</div>
 		</div>
@@ -50,9 +50,9 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Welcome to Linear</h2>
+					<h2>Welcome to my homepage</h2>
 				</header>
-				<p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
+				<!--p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p-->
 				<hr />
 				<div class="row">
 					<section class="4u">
@@ -134,7 +134,7 @@
 				<section>
 					<header>
 						<h2>Get in touch</h2>
-						<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+						<!--span class="byline">Integer sit amet pede vel arcu aliquet pretium</span-->
 					</header>
 					<ul class="contact">
 						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -149,7 +149,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Design: <a href="http://templated.co">TEMPLATED</a>
 			</div>
 		</div>
 
