--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 	<!-- Header -->
 		<div id="header">
 			<div id="nav-wrapper"> 
-				<!-- Nav >
-				<nav id="nav">
+				< Nav >
+				<!--nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="left-sidebar.html">Left Sidebar</a></li>
 						<li><a href="right-sidebar.html">Right Sidebar</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
-				</nav>
+				</nav-->
 			</div>
-			<div class="container"--> 
+			<div class="container"> 
 				
 				<!-- Logo -->
 				<div id="logo">
