--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- Header -->
 		<div id="header">
 			<div id="nav-wrapper"> 
-				< Nav >
+				<!-- Nav -->
 				<!--nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
@@ -41,7 +41,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href="#">Jasmin Odenwald</a></h1>
-					<span class="tag">B. Sc.</span>
+					<span class="tag">Bachelor of Science</span>
 				</div>
 			</div>
 		</div>
@@ -50,18 +50,18 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Welcome to my homepage</h2>
+					<h2>Welcome to my Homepage</h2>
 				</header>
 				<!--p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p-->
 				<hr />
 				<div class="row">
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-briefcase"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<span class="pennant"><span class="fa fa-file-text-o"></span></span>
+						<h3>CV</h3>
+						<p>Get my CV and additional files like the english certificates right here.</p>
+						<a href="#" class="button button-style1">Get CV</a>
 					</section>
-					<section class="4u">
+					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-lock"></span></span>
 						<h3>Maecenas luctus lectus</h3>
 						<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
@@ -72,13 +72,13 @@
 						<h3>Maecenas luctus lectus</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
 						<a href="#" class="button button-style1">Read More</a>
-					</section>
+					</section-->
 
 				</div>
 			</div>
 		</div>
 
-	<!-- Main -->
+	<!-- Main >
 		<div id="main">
 			<div id="content" class="container">
 
@@ -123,7 +123,7 @@
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+					<blockquote>&ldquo;I'm not playing a role. I'm being myself, whatever the hell that is.&rdquo; Bea Arthur</blockquote>
 				</section>
 			</div>
 		</div>
@@ -137,10 +137,10 @@
 						<!--span class="byline">Integer sit amet pede vel arcu aliquet pretium</span-->
 					</header>
 					<ul class="contact">
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-						<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<!--li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li-->
-						<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
+						<li><a href="https://plus.google.com/u/0/+JasminOdenwald" class="fa fa-google-plus"><span>Google+</span></a></li>
+						<li class="active"><a href="https://www.linkedin.com/in/jasmin-odenwald-901819117?trk=nav_responsive_tab_profile_pic" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
+						<li><a href="https://www.xing.com/profile/Jasmin_Odenwald2/portfolio" class="fa fa-xing"><span>Github</span></a></li>
+						<li><a href="https://github.com/JassiO" class="fa fa-github"><span>Github</span></a></li>
 					</ul>
 				</section>
 			</div>
