add certificate description

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o"></span></span>
 						<h3>CV</h3>
-						<p>Get my CV and additional files like the english certificates right here.</p>
+						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
 						<a href="#" class="button button-style1">Get CV</a>
 					</section>
-					<!--section class="4u">
-						<span class="pennant"><span class="fa fa-lock"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
-						<a href="#" class="button button-style1">Read More</a>
-					</section>
 					<section class="4u">
+						<span class="pennant"><span class="fa fa-file-text"></span></span>
+						<h3>Bachelor Certificate</h3>
+						<p>Here you can get my Offical Certificate, my Final Examination Certificate and the Diploma Supplement in German and English. </p>
+						<a href="#" class="button button-style1">Get Certificates</a>
+					<section>
+					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
 						<h3>Maecenas luctus lectus</h3>
 						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
@@ -123,7 +123,7 @@
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;I'm not playing a role. I'm being myself, whatever the hell that is.&rdquo; Bea Arthur</blockquote>
+					<blockquote>&ldquo;You can't buy happiness. But you can buy ice cream and that's kind of the same thing&rdquo; <em> - unknown </em> </blockquote>
 				</section>
 			</div>
 		</div>
