add download files direction

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 						<span class="pennant"><span class="fa fa-file-text-o"></span></span>
 						<h3>CV</h3>
 						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
-						<a href="#" class="button button-style1">Get CV</a>
+						<a href="download/CV.zip" class="button button-style1">Get CV</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text"></span></span>
 						<h3>Bachelor Certificate</h3>
 						<p>Here you can get my Offical Certificate, my Final Examination Certificate and the Diploma Supplement in German and English. </p>
-						<a href="#" class="button button-style1">Get Certificates</a>
+						<a href="download/certificates.zip" class="button button-style1">Get Certificates</a>
 					<section>
 					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
