--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
 						<a href="#" class="button button-style1">Get CV</a>
 					</section>
-					<section class="4u">
-						<span class="pennant"><span class="fa fa-file-text"></span></span>
+					<!--section class="4u"-->
+					
+						<!--span class="pennant"><span class="fa fa-file-text"></span></span>
 						<h3>Bachelor Certificate</h3>
 						<p>Here you can get my Offical Certificate, my Final Examination Certificate and the Diploma Supplement in German and English. </p>
 						<a href="#" class="button button-style1">Get Certificates</a>
@@ -123,7 +124,8 @@
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;You can't buy happiness. But you can buy ice cream and that's kind of the same thing&rdquo; <em> - unknown </em> </blockquote>
+					<!--blockquote>&ldquo;You can't buy happiness. But you can buy ice cream and that's kind of the same thing&rdquo; <em> - unknown </em> </blockquote-->
+					<blockquote>&ldquo;The grass isn't greener on the other side. It's greener where you water it&rdquo; <em> - unknown </em> </blockquote>
 				</section>
 			</div>
 		</div>
