Add line break to quote

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 			<div class="container">
 				<section>
 					<!--blockquote>&ldquo;You can't buy happiness. But you can buy ice cream and that's kind of the same thing&rdquo; <em> - unknown </em> </blockquote-->
-					<blockquote>&ldquo;The grass isn't greener on the other side. It's greener where you water it&rdquo; <em> - unknown </em> </blockquote>
+					<blockquote>&ldquo;The grass isn't greener on the other side. <br>  
+					It's greener where you water it&rdquo; <em> - unknown </em> </blockquote>
 				</section>
 			</div>
 		</div>
