Improved header by adding a circular image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<body class="homepage">
 
 	<!-- Header -->
-		<div id="header">
+		<!--div id="header">
 			<div id="nav-wrapper"> 
 				<!-- Nav -->
 				<!--nav id="nav">
@@ -35,16 +35,29 @@
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
 				</nav-->
-			</div>
+			<!--/div>
 			<div class="container"> 
 				
 				<!-- Logo -->
-				<div id="logo">
+				<!--div id="logo">
 					<h1><a href="#">Jasmin Odenwald</a></h1>
 					<span class="tag">Bachelor of Science</span>
 				</div>
 			</div>
-		</div>
+		</div-->
+		<div id="header_background">
+				<article class="container" id="top">
+					<div class="row">
+						<div class="4u 12u(mobile)">
+							<span class="image fit"><img src="images/header4.jpg" alt="" /></span>
+						</div>
+							<header>
+								<h1>Hi. I'm <strong>Jasmin Odenwald</strong>.</h>
+							</header>
+							<p></p>
+					</div>
+				</article>
+			</div>
 
 	<!-- Featured -->
 		<div id="featured">
@@ -61,12 +74,11 @@
 						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
 						<a href="#" class="button button-style1">Get CV</a>
 					</section>
-					<!--section class="4u"-->
-					
-						<!--span class="pennant"><span class="fa fa-file-text"></span></span>
-						<h3>Bachelor Certificate</h3>
-						<p>Here you can get my Offical Certificate, my Final Examination Certificate and the Diploma Supplement in German and English. </p>
-						<a href="#" class="button button-style1">Get Certificates</a>
+					<section class="4u"-->
+						<span class="pennant"><span class="fa fa-file-text"></span></span>
+						<h3>Work Sample</h3>
+						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them of course. </p>
+						<a href="#" class="button button-style1">Get the Tiles</a>
 					<section>
 					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
@@ -152,7 +164,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a>
+				based on: <a href="http://templated.co">Linear by TEMPLATED</a> and <a href="http://html5up.net">Miniport by HTML5 UP</a>
 			</div>
 		</div>
 
