Add Work Example

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<span class="pennant"><span class="fa fa-file-text"></span></span>
 						<h3>Work Sample</h3>
 						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them of course. </p>
-						<a href="#" class="button button-style1">Get the Tiles</a>
+						<a href="http://jassio.github.io/Garden_Tiles_3D.zip" class="button button-style1">Get the Tiles</a>
 					<section>
 					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
