Set header background image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 		</div-->
-		<div id="header_background">
+		<div id="test">
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
