--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Linear by TEMPLATED
-    templated.co @templatedco
-    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Linear by TEMPLATED</title>
+		<title>Jasmin Odenwald</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -22,29 +17,6 @@
 		</noscript>
 	</head>
 	<body class="homepage">
-
-	<!-- Header -->
-		<!--div id="header">
-			<div id="nav-wrapper"> 
-				<!-- Nav -->
-				<!--nav id="nav">
-					<ul>
-						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-					</ul>
-				</nav-->
-			<!--/div>
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<!--div id="logo">
-					<h1><a href="#">Jasmin Odenwald</a></h1>
-					<span class="tag">Bachelor of Science</span>
-				</div>
-			</div>
-		</div-->
 		<div id="test">
 				<article class="container" id="top">
 					<div class="row">
@@ -65,7 +37,6 @@
 				<header>
 					<h2>Welcome to my Homepage</h2>
 				</header>
-				<!--p>This is <strong>Linear</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p-->
 				<hr />
 				<div class="row">
 					<section class="4u">
@@ -91,47 +62,6 @@
 			</div>
 		</div>
 
-	<!-- Main >
-		<div id="main">
-			<div id="content" class="container">
-
-				<div class="row">
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic01.jpg" alt=""></a>
-						<header>
-							<h2>Mauris vulputate dolor</h2>
-						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic02.jpg" alt=""></a>
-						<header>
-							<h2>Mauris vulputate dolor</h2>
-						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
-				</div>
-
-				<div class="row">
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a>
-						<header>
-							<h2>Mauris vulputate dolor</h2>
-						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
-						<header>
-							<h2>Mauris vulputate dolor</h2>
-						</header>
-						<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-					</section>				
-				</div>
-			
-			</div>
-		</div>
-
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
@@ -149,7 +79,6 @@
 				<section>
 					<header>
 						<h2>Get in touch</h2>
-						<!--span class="byline">Integer sit amet pede vel arcu aliquet pretium</span-->
 					</header>
 					<ul class="contact">
 						<li><a href="https://plus.google.com/u/0/+JasminOdenwald" class="fa fa-google-plus"><span>Google+</span></a></li>
