--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<span class="pennant"><span class="fa fa-file-text-o"></span></span>
 						<h3>CV</h3>
 						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
-						<a href="#" class="button button-style1">Get CV</a>
+						<a href="http://jassio.github.io/CV.pdf" class="button button-style1">Get CV</a>
 					</section>
 					<section class="4u"-->
 						<span class="pennant"><span class="fa fa-file-text"></span></span>
