--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<a href="http://jassio.github.io/CV.pdf" class="button button-style1">Get CV</a>
 					</section>
 					<section class="4u"-->
-						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Smiley face" height="42" width="42"></span>
+						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Garden Tiles Example" height="256" width="256"></span>
 						<h3>Work Sample</h3>
 						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them of course. </p>
 						<a href="http://jassio.github.io/Garden_Tiles_3D.zip" class="button button-style1">Get the Tiles</a>
