--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<hr />
 				<div class="row">
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-file-text-o"></span></span>
+						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>CV</h3>
 						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
 						<a href="http://jassio.github.io/CV.pdf" class="button button-style1">Get CV</a>
