--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>CV</h3>
-						<p>Get my CV and additional files corresponding to it. You can find the english certificates here for example.</p>
+						<p>Here you can get my CV and additional files corresponding to it; for example the english certificates and a description of a project of mine. If you want to have a look at my bachelor certificate, feel free to write me an email.</p>
 						<a href="http://jassio.github.io/CV.pdf" class="button button-style1">Get CV</a>
 					</section>
 					<section class="4u"-->
 						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Garden Tiles Example" height="128" width="128"></span>
 						<h3>Work Sample</h3>
-						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them of course. </p>
+						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them for your own game or project, of course. </p>
 						<a href="http://jassio.github.io/Garden_Tiles_3D.zip" class="button button-style1">Get the Tiles</a>
 					<section>
 					<!--section class="4u">
