Add email to contacs

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 						<h2>Get in touch</h2>
 					</header>
 					<ul class="contact">
+						<li><a href="mailto:jasmin.odenwald@gmail.com?Subject=Contact%20request" target="_top" class="fa fa-envelope"><span>Send Mail</span></a></li>
 						<li><a href="https://plus.google.com/u/0/+JasminOdenwald" class="fa fa-google-plus"><span>Google+</span></a></li>
 						<li class="active"><a href="https://www.linkedin.com/in/jasmin-odenwald-901819117?trk=nav_responsive_tab_profile_pic" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Jasmin_Odenwald2/portfolio" class="fa fa-xing"><span>Github</span></a></li>
