Correct CV file name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>CV</h3>
 						<p>Here you can get my CV and additional files corresponding to it; for example the english certificates and a description of a project of mine. If you want to have a look at my bachelor certificate, feel free to write me an email.</p>
-						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.pdf" class="button button-style1">Get CV</a>
+						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Get CV</a>
 					</section>
 					<section class="4u"-->
 						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Garden Tiles Example" height="140" width="140"></span>
