--- a/unity.html
+++ b/unity.html
@@ -23,9 +23,9 @@
     TOTAL_MEMORY: 536870912,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Release/build.data",
-    codeUrl: "Release/build.js",
-    memUrl: "Release/build.mem",
+    dataUrl: "Release/build.datagz",
+    codeUrl: "Release/build.jsgz",
+    memUrl: "Release/build.memgz",
   };
 </script>
 <script src="Release/UnityLoader.js"></script>
