Add interactive cv

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<span class="image fit"><img src="images/header4.jpg" alt="" /></span>
 						</div>
 							<header>
-								<h1>Hi. I'm <strong>Jasmin Odenwald</strong>.</h>
+								<h1>Huhu. Ich bin <strong>Jasmin Odenwald</strong>.</h>
 							</header>
 							<p></p>
 					</div>
@@ -36,22 +36,28 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Welcome to my Homepage</h2>
+					<h2>Willkommen auf meiner Website</h2>
 				</header>
 				<hr />
 				<div class="row">
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
-						<h3>CV</h3>
-						<p>Here you can get my CV and additional files corresponding to it; for example the english certificates and a description of a project of mine. If you want to have a look at my bachelor certificate, feel free to write me an email.</p>
-						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Get CV</a>
+						<h3>Lebenslauf</h3>
+						<p>Hier kannst Du Dir meinen Lebenslauf herunterladen. </p>
+						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Zum Lebenslauf</a>
 					</section>
-					<section class="4u"-->
+					<section class="4u">
+						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
+						<h3>Interaktive Bewerbung</h3>
+						<p>Spannend... Hier gibts meine etwas andere Bewerbung. Schau sie Dir unbedingt an! </p>
+						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Und los!</a>
+					</section>
+					<!--section class="4u">
 						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Garden Tiles Example" height="140" width="140"></span>
-						<h3>Work Sample</h3>
-						<p>Here you can get some Tiles for a 3D Garden Game I made. The Tiles are an example for my work on the Bauhaus-Universität Weimar. You also can use them for your own game or project, of course. </p>
+						<h3>Low Poly Tiles</h3>
+						<p>Hier findest Du ein paar Low Poly Tiles für ein 3D Spiel, an welchem ich mitgearbeitet habe.</p>
 						<a href="http://jassio.github.io/Garden_Tiles_3D.zip" class="button button-style1">Get the Tiles</a>
-					<section>
+					<section-->
 					<!--section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
 						<h3>Maecenas luctus lectus</h3>
