--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<span class="image fit"><img src="images/header4.jpg" alt="" /></span>
 						</div>
 							<header>
-								<h1>Huhu. Ich bin <strong>Jasmin Odenwald</strong>.</h>
+								<h1>Hi. Ich bin <strong>Jasmin Odenwald</strong>.</h>
 							</header>
 							<p></p>
 					</div>
@@ -44,27 +44,20 @@
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>Lebenslauf</h3>
 						<p>Hier kannst Du Dir meinen Lebenslauf herunterladen. </p>
-						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Zum Lebenslauf</a>
+						<a href="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>Interaktive Bewerbung</h3>
 						<p>Spannend... Hier gibts meine etwas andere Bewerbung. Schau sie Dir unbedingt an! </p>
-						<a href="http://jassio.github.io/CV_Jasmin_Odenwald.zip" class="button button-style1">Und los!</a>
+						<a href="http://jassio.github.io/unity.html" class="button button-style1">Und los!</a>
 					</section>
-					<!--section class="4u">
-						<span class="pennant"><img src="http://jassio.github.io/images/GardenTiles.png" alt="Garden Tiles Example" height="140" width="140"></span>
-						<h3>Low Poly Tiles</h3>
-						<p>Hier findest Du ein paar Low Poly Tiles für ein 3D Spiel, an welchem ich mitgearbeitet habe.</p>
-						<a href="http://jassio.github.io/Garden_Tiles_3D.zip" class="button button-style1">Get the Tiles</a>
-					<section-->
-					<!--section class="4u">
-						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
-					</section-->
-
+					<section class="4u">
+						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
+						<h3>Andere Dokumente</h3>
+						<p>Hier findest Du eine Übersicht von anderen wichtigen Dokumenten, wie beispielsweise meine Sprachnachweise. </p>
+						<a href="http://jassio.github.io/docs.html" class="button button-style1">Zur Übersicht</a>
+					</section>
 				</div>
 			</div>
 		</div>
@@ -74,8 +67,8 @@
 			<div class="container">
 				<section>
 					<!--blockquote>&ldquo;You can't buy happiness. But you can buy ice cream and that's kind of the same thing&rdquo; <em> - unknown </em> </blockquote-->
-					<blockquote>&ldquo;The grass isn't greener on the other side. <br>  
-					It's greener where you water it&rdquo; <em> - unknown </em> </blockquote>
+					<blockquote>&ldquo;The grass isn't greener on the other side. 
+					<br>It's greener where you water it&rdquo; <em> - unbekannt </em> </blockquote>
 				</section>
 			</div>
 		</div>
@@ -85,10 +78,10 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Get in touch</h2>
+						<h2>Nimm gleich Kontakt zu mir auf</h2>
 					</header>
 					<ul class="contact">
-						<li><a href="mailto:jasmin.odenwald@gmail.com?Subject=Contact%20request" target="_top" class="fa fa-envelope"><span>Send Mail</span></a></li>
+						<li><a href="mailto:jasmin.odenwald@gmail.com?Subject=Contact%20request" target="_top" class="fa fa-envelope"><span>Mail</span></a></li>
 						<li><a href="https://plus.google.com/u/0/+JasminOdenwald" class="fa fa-google-plus"><span>Google+</span></a></li>
 						<li class="active"><a href="https://www.linkedin.com/in/jasmin-odenwald-901819117?trk=nav_responsive_tab_profile_pic" class="fa fa-linkedin"><span>LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Jasmin_Odenwald2/portfolio" class="fa fa-xing"><span>Github</span></a></li>
@@ -101,7 +94,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				based on: <a href="http://templated.co">Linear by TEMPLATED</a> and <a href="http://html5up.net">Miniport by HTML5 UP</a>
+				basierend auf: <a href="http://templated.co">Linear von TEMPLATED</a> und <a href="http://html5up.net">Miniport von HTML5 UP</a>
 			</div>
 		</div>
 
