Add pointandcv image

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 						<a href="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
 					</section>
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
+						<span class="pennant"><img src="http://jassio.github.io/images/pointandcv.jpg" alt="Garden Tiles Example" height="140" width="140"></span></span>
 						<h3>Interaktive Bewerbung</h3>
 						<p>Spannend... Hier gibts meine etwas andere Bewerbung. Schau sie Dir unbedingt an! </p>
 						<a href="http://jassio.github.io/unity.html" class="button button-style1">Und los!</a>
 					</section>
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
+						<span class="pennant"><span class="fa Example of files-o fa-files-o fa-2x"></span></span>
 						<h3>Andere Dokumente</h3>
 						<p>Hier findest Du eine Übersicht von anderen wichtigen Dokumenten, wie beispielsweise meine Sprachnachweise. </p>
 						<a href="http://jassio.github.io/docs.html" class="button button-style1">Zur Übersicht</a>
