Show pdf in browser instead of downloading them

--- a/docs.html
+++ b/docs.html
@@ -21,11 +21,7 @@
 		<div id="test">
 				<article class="container" id="top">
 					<div class="row">
-						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/header4.jpg" alt="" /></span>
-						</div>
 							<header>
-								<h1>Hi. Ich bin <strong>Jasmin Odenwald</strong>.</h>
 							</header>
 							<p></p>
 					</div>
@@ -36,7 +32,7 @@
 		<div id="featured">
 			<div class="container">
 				<header>
-					<h2>Willkommen auf meiner Website</h2>
+					<h2>Dokumente</h2>
 				</header>
 				<hr />
 				<div class="row">
@@ -44,7 +40,7 @@
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>Lebenslauf</h3>
 						<p>Hier kannst Du Dir meinen Lebenslauf herunterladen. </p>
-						<embed src="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</embed>
+						<a href="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><img src="http://jassio.github.io/images/pointandcv.jpg" alt="Garden Tiles Example" height="140" width="140"></span></span>
