--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3>Lebenslauf</h3>
 						<p>Hier kannst Du Dir meinen Lebenslauf herunterladen. </p>
-						<embed src="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</embed>
+						<a target="_blank" href="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><img src="http://jassio.github.io/images/pointandcv.jpg" alt="Garden Tiles Example" height="140" width="140"></span></span>
