--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<section class="4u">
 						<span class="pennant"><span class="fa Example of files-o fa-files-o fa-2x"></span></span>
 						<h3>Andere Dokumente</h3>
-						<p>Hier findest Du eine Übersicht von anderen wichtigen Dokumenten, wie beispielsweise meine Sprachnachweise. </p>
+						<p>Hier findest Du beispielsweise meine Sprachnachweise. </p>
 						<a href="http://jassio.github.io/docs.html" class="button button-style1">Zur Übersicht</a>
 					</section>
 				</div>
