--- a/docs.html
+++ b/docs.html
@@ -37,25 +37,28 @@
 				<hr />
 				<div class="row">
 					<section class="4u">
+						<span class="pennant"><span class="fa fa-globe fa-2x"></span></span>
+						<h3>Sprachnachweise</h3>
+						<p>Hier findest Du die Nachweise für meine B2-Englisch-Kurse.</p>
+						<a traget="blank" href="http://jassio.github.io/documents/Sprachnachweise.pdf" class="button button-style1">Zu den Nachweisen</a>
+					</section>
+					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
-						<h3>Lebenslauf</h3>
-						<p>Hier kannst Du Dir meinen Lebenslauf herunterladen. </p>
-						<a href="http://jassio.github.io/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
+						<h3>Tutorennachweis</h3>
+						<p>Was ich während meiner Tutorentätigkeit gemacht habe, erfährst Du hier.</p>
+						<a traget="blank" href="http://jassio.github.io/documents/Tutorennachweis.pdf" class="button button-style1">Und los!</a>
 					</section>
 					<section class="4u">
-						<span class="pennant"><img src="http://jassio.github.io/images/pointandcv.jpg" alt="Garden Tiles Example" height="140" width="140"></span></span>
-						<h3>Interaktive Bewerbung</h3>
-						<p>Spannend... Hier gibts meine etwas andere Bewerbung. Schau sie Dir unbedingt an! </p>
-						<a href="http://jassio.github.io/unity.html" class="button button-style1">Und los!</a>
+						<span class="pennant"><span class="fa Example of files-o fa-briefcase fa-2x"></span></span>
+						<h3>Arbeitsbeschreibung</h3>
+						<p>Hier erfährst Du, was ich während meiner Bachelorarbeit gemacht habe. </p>
+						<a traget="blank" href="http://jassio.github.io/documents/Arbeitsprobe.pdf" class="button button-style1">Lass mal sehen!</a>
 					</section>
-					<section class="4u">
-						<span class="pennant"><span class="fa Example of files-o fa-files-o fa-2x"></span></span>
-						<h3>Andere Dokumente</h3>
-						<p>Hier findest Du eine Übersicht von anderen wichtigen Dokumenten, wie beispielsweise meine Sprachnachweise. </p>
-						<a href="http://jassio.github.io/docs.html" class="button button-style1">Zur Übersicht</a>
-					</section>
+
+					
 				</div>
 			</div>
+			<h1><br><br><br>Falls Du weitere Unterlagen benötigst oder Fragen hast, <br><br>schreibe mir gerne eine Mail.</h1> 
 		</div>
 
 	<!-- Tweet -->
