Small text changes

--- a/docs.html
+++ b/docs.html
@@ -40,7 +40,7 @@
 						<span class="pennant"><span class="fa fa-globe fa-2x"></span></span>
 						<h3>Sprachnachweise</h3>
 						<p>Hier findest Du die Nachweise für meine B2-Englisch-Kurse.</p>
-						<a traget="blank" href="http://jassio.github.io/documents/Sprachnachweis.pdf" class="button button-style1">Zu den Nachweisen</a>
+						<a traget="blank" href="http://jassio.github.io/documents/Sprachnachweis.pdf" class="button button-style1">Let's have a look!</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
@@ -52,7 +52,7 @@
 						<span class="pennant"><span class="fa Example of files-o fa-briefcase fa-2x"></span></span>
 						<h3>Arbeitsbeschreibung</h3>
 						<p>Hier erfährst Du, was ich während meiner Bachelorarbeit gemacht habe. </p>
-						<a traget="blank" href="http://jassio.github.io/documents/Arbeitsprobe.pdf" class="button button-style1">Lass mal sehen!</a>
+						<a traget="blank" href="http://jassio.github.io/documents/Arbeitsprobe.pdf" class="button button-style1">Zeig mal her!</a>
 					</section>
 
 					
