Finalize dotsource files

--- a/dotsource.html
+++ b/dotsource.html
@@ -50,7 +50,7 @@
 						<span class="pennant"><span class="fa fa-file-text-o fa-2x"></span></span>
 						<h3></h3>
 						<p>Hier kannst Du Dir jetzt meinen Lebenslauf und alle anderen wichtigen Unterlagen ansehen. </p>
-						<a target="blank" href="http://jassio.github.io/documents/Lebenslauf.pdf" class="button button-style1">Zum Lebenslauf</a>
+						<a target="blank" href="http://jassio.github.io/documents/Odenwald,Jasmin_Bewerbung_dotsource.pdf" class="button button-style1">Zur Bewerbung</a>
 					</section>
 				</div>
 			</div>
