--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -45,8 +45,10 @@
 									<br> 
 									<br> Das ganze soll gegen <strong>20 Uhr</strong> bei bei uns im Garten starten. Ich werde für einen Grill und einen Grundvorrat an Getränken sorgen. Alles weitere und spezielle Wünsche erfüllt ihr euch bitte selbst.
 									<br>
-									<br> Apropos Wünsche... Ich wünsch mir, dass das eine tolle Feier wird, zu der jeder was kleines (und sei es 'nur' gute Laune) beträgt. Mehr brauche ich gar nicht :) 
-									<br> <sub>Wobei ich mich auch nicht mit Händen und Füßen wehren werde, wenn ihr mir was schenken möchtet ;D</sub></p>
+									<br> Apropos Wünsche... Ich wünsch mir, dass das eine tolle Feier wird. Am besten bringt jeder eine Kleinigkeit dafür mit (und sei es 'nur' gute Laune). Das ist alles, was ich möchte :) 
+									<br> <sub>Gegen größe Geschenke werde ich mich wehren... Nein, Spaß :D</sub>
+									<br>
+									<br> Gegebenenfalls wird es für Getränke und Speisen hier noch eine Doodle-Liste geben, damit wir nicht 10 Kuchen, aber keine Würstchen für den Grill haben :D</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -70,14 +72,22 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) >
-							<section class="panel spotlight large left">
+						<Panel (Spotlight) >
+							<section class="panel spotlight middle left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major">Kontakt</h2>
+									<p>Ihr erreicht mich unter meiner (neuen) Telefonnummer oder unter:</p>
+									<div class="span-1-5">
+										<ul class="contact-icons color1">
+											<li class="icon fa-facebook"><a href="https://www.facebook.com/jasmin.odenwald">Facebook</a></li>
+											<li class="icon fa-envelope"><a href="mailto:jasmin.odenwald@gmail.com?Subject=Contact%20request" target="_top" ><span>Mail</span></a></li>
+											<li class="icon fa-google-plus"><a href="https://plus.google.com/u/0/+JasminOdenwald"><span>Google+</span></a></li>
+											
+										</ul>
+									</div>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic012.jpg" alt="" />
 								</div>
 							</section>
 
