--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	
 	</head>
 	<body>
 
@@ -25,9 +27,8 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Lasst uns<br />
 									FEIERN!</h1>
-									<p>Mit diesem Link erhälst Du eine herzliche Einladung zu <br><strong>Jassis total spektakulärer Geburtstags- & Einweihungsfeier</strong>.<br>
+									<p>Mit diesem Link erhälst Du eine herzliche Einladung zu <br /><strong>Jassis total spektakulärer Geburtstags- & Einweihungsfeier</strong>.<br />
 									Hier findest du alle Infos, die Du benötigst. <br>Ich freue mich auf Dich :)</p>
-
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
@@ -65,11 +66,11 @@
 									<br>Ich bitte <strong>alle</strong>, die dabei sein werden, um <strong>kurze Rückmeldung</strong>. Einfach damit ich den Grundvorrat an Getränken einschätzen kann :)</p>
 								</div>
 								<div class="inner">
-									<div class="overlay" onClick="style.pointerEvents='none'"></div>
+									<!--div class="no-map-scroll"> <div class="click-map"></div>
 										<!--span class="icon fa-diamond"><span class="label">Lorem</span></span-->
-										<iframe id="myframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.1808967166103!2d13.750524815051355!3d51.06821065054117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4709cf3c4959fc85%3A0x41215bcad3732e5c!2sAlaunstra%C3%9Fe+61%2C+01099+Dresden!5e0!3m2!1sde!2sde!4v1500552218327" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-										
-								</div>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.1808967166103!2d13.750524815051355!3d51.06821065054117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4709cf3c4959fc85%3A0x41215bcad3732e5c!2sAlaunstra%C3%9Fe+61%2C+01099+Dresden!5e0!3m2!1sde!2sde!4v1500552218327"  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+										</div>
+								
 							</section>
 
 						<Panel (Spotlight) >
@@ -414,13 +415,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<li><input type="submit" value="Send Message" class="special color2" /></li>
 												<li><input type="reset" value="Reset" /></li>
 											</ul>
-										</form>
+										</form-->
 									</div>
 								</div>
 							</section>
 
-						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+						<!-- Copyright >
+							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div-->
 
 					</div>
 
