--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -28,7 +28,9 @@
 									<h1 class="major">Lasst uns<br />
 									FEIERN!</h1>
 									<p>Mit diesem Link erhälst Du eine herzliche Einladung zu <br /><strong>Jassis total spektakulärer Geburtstags- & Einweihungsfeier</strong>.<br />
-									Hier findest du alle Infos, die Du benötigst. <br>Ich freue mich auf Dich :)</p>
+									Hier findest du alle Infos, die Du benötigst. Bitte sag mir kurz <strong>Bescheid</strong>, dass Du da sein wirst.
+									<br>Ich freue mich auf Dich :)
+									</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
