--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -44,7 +44,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Veranstaltungsdetails</h2>
-									<p>Gefeiert wird am <strong>5. August 2017</strong>. Aber Achtung: Ich feiere rein ;)
+									<p>Gefeiert wird am <strong>5. August 2017</strong>. Aber Achtung: Ich feiere rein. Also erst am 6. August gratulieren ;)
 									<br> 
 									<br> Das ganze soll gegen <strong>20 Uhr</strong> bei bei uns im Garten starten. Ich werde für einen Grill und einen Grundvorrat an Getränken sorgen. Alles weitere und spezielle Wünsche erfüllt ihr euch bitte selbst.
 									<br>
