added icalendar event

--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-	
+
 	</head>
 	<body>
 
@@ -45,10 +45,10 @@
 								<div class="content span-7">
 									<h2 class="major">Veranstaltungsdetails</h2>
 									<p>Gefeiert wird am <strong>5. August 2017</strong>. Aber Achtung: Ich feiere rein. Also erst am 6. August gratulieren ;)
-									<br> 
+									<br>
 									<br> Das ganze soll gegen <strong>20 Uhr</strong> bei bei uns im Garten starten. Ich werde für einen Grill und einen Grundvorrat an Getränken sorgen. Alles weitere und spezielle Wünsche erfüllt ihr euch bitte selbst.
 									<br>
-									<br> Apropos Wünsche... Ich wünsch mir, dass das eine tolle Feier wird. Am besten bringt jeder eine Kleinigkeit dafür mit (und sei es 'nur' gute Laune). Das ist alles, was ich möchte :) 
+									<br> Apropos Wünsche... Ich wünsch mir, dass das eine tolle Feier wird. Am besten bringt jeder eine Kleinigkeit dafür mit (und sei es 'nur' gute Laune). Das ist alles, was ich möchte :)
 									<br> <sub>Gegen größe Geschenke werde ich mich wehren... Nein, Spaß :D</sub>
 									<br>
 									<br> Gegebenenfalls wird es für Getränke und Speisen hier noch eine Doodle-Liste geben, damit wir nicht 10 Kuchen, aber keine Würstchen für den Grill haben :D</p>
@@ -72,7 +72,7 @@
 										<!--span class="icon fa-diamond"><span class="label">Lorem</span></span-->
 										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.1808967166103!2d13.750524815051355!3d51.06821065054117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4709cf3c4959fc85%3A0x41215bcad3732e5c!2sAlaunstra%C3%9Fe+61%2C+01099+Dresden!5e0!3m2!1sde!2sde!4v1500552218327"  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 										</div>
-								
+
 							</section>
 
 						<Panel (Spotlight) >
@@ -85,9 +85,10 @@
 											<li class="icon fa-facebook"><a href="https://www.facebook.com/jasmin.odenwald">Facebook</a></li>
 											<li class="icon fa-envelope"><a href="mailto:jasmin.odenwald@gmail.com?Subject=Contact%20request" target="_top" ><span>Mail</span></a></li>
 											<li class="icon fa-google-plus"><a href="https://plus.google.com/u/0/+JasminOdenwald"><span>Google+</span></a></li>
-											
+
 										</ul>
 									</div>
+                                    <p><a href="/meeting.ics">Termin in Kalender importieren.</a></p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic012.jpg" alt="" />
