--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -88,7 +88,7 @@
 
 										</ul>
 									</div>
-                                    <p><a href="/meeting.ics">Termin in Kalender importieren.</a></p>
+                                    <p><a href="https://jassio.github.io/invitation/meeting.ics">Termin in Kalender importieren.</a></p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic012.jpg" alt="" />
