--- a/invitation/invitation.html
+++ b/invitation/invitation.html
@@ -51,7 +51,7 @@
 									<br> Apropos Wünsche... Ich wünsch mir, dass das eine tolle Feier wird. Am besten bringt jeder eine Kleinigkeit dafür mit (und sei es 'nur' gute Laune). Das ist alles, was ich möchte :)
 									<br> <sub>Gegen größe Geschenke werde ich mich wehren... Nein, Spaß :D</sub>
 									<br>
-									<br> Gegebenenfalls wird es für Getränke und Speisen hier noch eine Doodle-Liste geben, damit wir nicht 10 Kuchen, aber keine Würstchen für den Grill haben :D</p>
+									<br> Gegebenenfalls wird es für Getränke und Speisen <a href="http://www.bringabottle.de/Visit/7e62305b-a71d-40b6-8f65-d66ed5fd6d35">hier noch eine Liste</a> geben, damit wir nicht 10 Kuchen, aber keine Würstchen für den Grill haben :D</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -117,7 +117,6 @@
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 								</div>
 							</section>
-
 						<!-- Panel >
 							<section class="panel color4-alt">
 								<div class="intro color4">
@@ -155,7 +154,6 @@
 									</div>
 								</div>
 							</section>
-
 						<!-- Panel >
 							<section class="panel color2-alt">
 								<div class="intro color2">
@@ -164,47 +162,36 @@
 								</div>
 								<div class="inner columns aligned">
 									<div class="span-2-75">
-
 										<h3 class="major">Text</h3>
 										<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 										This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 										This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-
 										<h1>Heading Level 1</h1>
 										<h2>Heading Level 2</h2>
 										<h3>Heading Level 3</h3>
 										<h4>Heading Level 4</h4>
 										<h5>Heading Level 5</h5>
 										<h6>Heading Level 6</h6>
-
 									</div>
 									<div class="span-3">
-
 										<h4>Blockquote</h4>
 										<blockquote>Lorem ipsum dolor sit amet. Felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in vestibulum. Blandit adipiscing eu iaculis volutpat ac adipiscing volutpat ac adipiscing faucibus.</blockquote>
-
 										<h4>Preformatted</h4>
 										<pre><code>i = 0;
-
 while (!deck.isInOrder()) {
     print 'Iteration ' + (i++);
     deck.shuffle();
 }
-
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-
 									</div>
 									<div class="span-1-25">
-
 										<h3 class="major">Lists</h3>
-
 										<h4>Unordered</h4>
 										<ul>
 											<li>Lorem ipsum dolor sit.</li>
 											<li>Dolor pulvinar etiam.</li>
 											<li>Etiam vel felis viverra.</li>
 										</ul>
-
 										<h4>Alternate</h4>
 										<ul class="alt">
 											<li>Lorem ipsum dolor sit.</li>
@@ -212,10 +199,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li>Etiam vel felis viverra.</li>
 											<li>Felis enim feugiat.</li>
 										</ul>
-
 									</div>
 									<div class="span-1-5">
-
 										<h4>Ordered</h4>
 										<ol>
 											<li>Lorem ipsum dolor sit.</li>
@@ -224,7 +209,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li>Felis enim feugiat.</li>
 											<li>Etiam vel felis lorem.</li>
 										</ol>
-
 										<h4>Actions</h4>
 										<ul class="actions">
 											<li><a href="#" class="button special color2">Default</a></li>
@@ -234,10 +218,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><a href="#" class="button special color2">Default</a></li>
 											<li><a href="#" class="button">Default</a></li>
 										</ul>
-
 									</div>
 									<div class="span-1-25">
-
 										<h4>Icons</h4>
 										<ul class="icons">
 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -246,7 +228,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 											<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
 										</ul>
-
 										<h4>Contact Icons</h4>
 										<ul class="contact-icons color2">
 											<li class="icon fa-twitter"><a href="#">Twitter</a></li>
@@ -255,7 +236,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li class="icon fa-github"><a href="#">GitHub</a></li>
 											<li class="icon fa-medium"><a href="#">Medium</a></li>
 										</ul>
-
 									</div>
 									<div class="span-3">
 										<h3 class="major">Table</h3>
