Add doodle link

--- a/Stellar/wishinguponthestars.html
+++ b/Stellar/wishinguponthestars.html
@@ -97,7 +97,11 @@
 										Sollte das Wetter mitspielen, sind Eure Freunde natürlich auch erwünscht. Kurze Meldung dazu reicht. Eure Partner sind  selbstverständlich eingeladen und dürfen einfach so mitgebracht werden.
 										<br>
 										<br>
-										Wie immer macht Ihr mit die größte Freude, wenn Ihr für Euch selbst sorgt. Etwas Bier, Softgetränke, Gitarre und Cajon werden gestellt. Für alles andere gibt es <a href="https://werbringtwas.com/poll/4736e1b">hier</a> sonst auch nochmal eine Liste, wo Ihr eintragen könnt, was Ihr mitbringt.</p>
+										Wie immer macht Ihr mit die größte Freude, wenn Ihr für Euch selbst sorgt. Etwas Bier, Softgetränke, Gitarre und Cajon werden gestellt. Für alles andere gibt es <a href="https://werbringtwas.com/poll/4736e1b">hier</a> sonst auch nochmal eine Liste, wo Ihr eintragen könnt, was Ihr mitbringt. 
+										<br>
+										<br> 
+										Falls ihr zurück laufen wollt, bringt Euch bitte <b>Taschenlampen</b> mit :)
+									</p>
 								</header>
 								<!--ul class="statistics">
 									<li class="style1">
@@ -170,10 +174,10 @@
 								<li><a href="mailto:odenwald91@gmail.com?subject=Wishing%upon%the%stars%together" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
 								<li><a href="https://www.facebook.com/jasmin.odenwald" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/jassis_ode/?hl=de" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<!--li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li-->
+								<li><a href="https://doodle.com/poll/xs48vhhstnexqbr6" class="icon fa-calendar-check-o alt"><span class="label">Doodle</span></a></li>
+								<!--li><a href="https://doodle.com/poll/xs48vhhstnexqbr6" class="icon fa-dribbble alt"><span class="label">Doodle</span></a></li-->
 							</ul>
-							... oder ganz entspannt per Whatsapp ;)
+							... oder ganz entspannt per <b>Whatsapp</b> ;)
 							<br>
 							<br>
 							<h2 style="text-align:left"> Ich freu mich auf Euch! 
