--- a/Stellar/wishinguponthestars.html
+++ b/Stellar/wishinguponthestars.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:image" content="images/preview.jpg">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/stars.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon-star.ico">
@@ -18,6 +19,12 @@
 
 	<body class="is-preload">
 	<canvas class="dots" id="dots" name="dots"></canvas>
+	
+    <div class="star-container" id="star-cont">
+      <div class="star" id="mr_star"></div>
+    </div>
+  </div>
+</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -198,6 +205,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/dots.js"></script>
+			<script src="assets/js/stars.js"></script>
 
 	</body>
 </html>
