--- a/riddle.html
+++ b/riddle.html
@@ -1,1 +1,4 @@
-:)
+
+Sometimes there is more than what meets the eye...
+
+<div style="background: #fff"> ...and yeah... there is. Take a look the source code ;) </div>
